--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "file-types",
   "main": "./lib/file-types",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Specify additional file types for languages.",
   "repository": "https://github.com/execjosh/atom-file-types",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
